# weather-header

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ruff-action.yaml
src/weather_header/: admin.py  main.py
src/weather_header/artist/: generator.py
src/weather_header/calculator/: resolver.py  schemas.py  utils.py  weatherclient.py
src/weather_header/db/: session.py
src/weather_header/users/: models.py  repository.py  schemas.py
