[project]
name = "weather-header"
version = "0.1.0"
description = "Dynamic weather graphic as animation, for your GitHub profile."
readme = "README.md"
authors = [
    { name = "donngas", email = "geunhyeong7420@korea.ac.kr" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
weather-header = "weather_header:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
