[project]
name = "weather-header"
version = "0.1.0"
description = "Dynamic weather graphic as animation, for your GitHub profile."
readme = "README.md"
authors = [
    { name = "donngas", email = "geunhyeong7420@korea.ac.kr" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "geopy>=2.4.1",
    "jinja2>=3.1.6",
    "openmeteo-requests>=1.7.4",
    "pandas>=2.3.3",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "sqladmin>=0.22.0",
    "sqlalchemy>=2.0.45",
    "timezonefinder>=8.2.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
weather-header = "weather_header:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pillow>=12.1.0",
]
